# xmmeec

./: .gitattributes  Makefile  Makefile.global.in  README  README.md  build.bat  configure  configure.in
config/: mkshortcut.vbs
desktop/: Makefile  xmmeec.desktop
documents/: ChangeLog  INSTALL  Makefile  README  changelog
languages/: Makefile  xmmeec.pot  xmmeec_hu.mo  xmmeec_hu.po
manuals/: Makefile  xmmeec_en.1
packaging/deb/: control  copyright  md5sums  postinst  prerm
packaging/exe/: xmmeec-0.1.1.nsi  xmmeec-0.1.2.nsi  xmmeec-0.1.nsi
packaging/linux-bin/: create_links  install  remove_links  uninstall
packaging/linux-deb-amd64/: conffiles  control  md5sums
packaging/linux-deb-i386/: control  md5sums  prerm
packaging/msi/: xmmeec-0.1.1.xml  xmmeec-0.1.2.xml  xmmeec-0.1.xml
packaging/rpm/: xmmeec-0.1-1.spec  xmmeec-0.1.1-1.spec  xmmeec-0.1.2-1.spec
packaging/txz-freebsd/: Makefile  pkg-descr  pkg-plist
packaging/txz-linux/: slack-desc
packaging/windows-exe/: xmmeec-0.2.nsi  xmmeec-0.3.nsi
packaging/windows-msi/: xmmeec-0.2.xml  xmmeec-0.3.xml
settings/: Makefile  xmmeec.ini
source/: Makefile  config.inc.in  config.pas  config.pas.in  frmabout.lfm  frmabout.lrt  frmabout.pas  frmmain.lfm  frmmain.lrt  frmmain.pas  frmtransfer.lfm  frmtransfer.lrt  frmtransfer.pas  incloadinifile.pas  incsaveinifile.pas  incsavetxtfile.pas  inctransfer.pas  note.txt  untcommonproc.pas  unttranslator.pas  xmmeec.lpi  xmmeec.lpr  xmmeec.lps  xmmeec.res
source/pics/: xmmeec_32.xpm  xmmeec_48.xpm  xmmeec_64.xpm
